RESOLVED FIXED46264
Assertion fails in [WKView _updateWindowFrame] when closing a WebKit2 window
https://bugs.webkit.org/show_bug.cgi?id=46264
Summary Assertion fails in [WKView _updateWindowFrame] when closing a WebKit2 window
Anders Carlsson
Reported 2010-09-22 08:16:41 PDT
Assertion fails in [WKView _updateWindowFrame] when closing a WebKit2 window
Attachments
Patch (1.39 KB, patch)
2010-09-22 08:21 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2010-09-22 08:17:25 PDT
Anders Carlsson
Comment 2 2010-09-22 08:21:37 PDT
Anders Carlsson
Comment 3 2010-09-22 08:37:40 PDT
Note You need to log in before you can comment on or make changes to this bug.