Assertion fails in [WKView _updateWindowFrame] when closing a WebKit2 window https://bugs.webkit.org/show_bug.cgi?id=46264 <rdar://problem/8463534>

Reviewed by Adam Roben.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]):
Only update window visibility and frame when we're moving to a window.

Canonical link: https://commits.webkit.org/58748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68046 268f45cc-cd09-0410-ab3c-d52691b4dbfc